cmake_minimum_required(VERSION 3.10)
project(pid_6_6 VERSION 6.6.0 DESCRIPTION "biu pid controller s/w")

set(CMAKE_C_COMPILER arm-linux-gnueabihf-gcc-14)
set(CMAKE_CXX_COMPILER arm-linux-gnueabihf-g++-14)
set(CMAKE_C_STANDARD 23)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_SYSTEM_PROCESSOR arm)
set(CMAKE_SYSTEM_NAME Linux)
string(TIMESTAMP BUILD_TIME "%Y-%m-%dT%H:%M:%S")

add_link_options("-static")
add_executable(pid_6_6 main.c server.c)
target_compile_options(pid_6_6 PUBLIC -mcpu=cortex-a8 -mfloat-abi=hard)

message("1. version major:${pid_6_6_VERSION_MAJOR}, minor:${pid_6_6_VERSION_MINOR}")
message("2. version ${PROJECT_VERSION}")
message("3. version major ${PROJECT_VERSION_MAJOR}")
message("4. version minor ${PROJECT_VERSION_MINOR}")
message("5. project name ${PROJECT_NAME}")

if (EXISTS version.h.in)
    configure_file(version.h.in version.h)
    message("Confgiuring version.h.ini")
else()
    message(WARNING "version.h.in does not exist")
endif()

# set(FPGA_SOCAL_PATH "$ENV{HOME}/sw/quartus_lite/intel-socfpga-hwlib/armv7a/hwlib/include/soc_cv_av")
# set(FPGA_HWLIB_PATH "$ENV{HOME}/sw/quartus_lite/intel-socfpga-hwlib/armv7a/hwlib/include")

set(FPGA_HWLIB_PATH "/opt/intelFPGA/20.1/embedded/ip/altera/hps/altera_hps/hwlib/include/")
set(FPGA_SOCAL_PATH "${FPGA_HWLIB_PATH}/soc_cv_av")

if(EXISTS ${FPGA_HWLIB_PATH})
    message("hwlib folder at [${FPGA_HWLIB_PATH}]")
else()
    message(ERROR "hwlib folder [${FPGA_HWLIB_PATH}] not found")
endif()
set(GSL_SOURCE_DIR "/opt/shared/gsl")
set(GSL_ARM_INCLUDE "${GSL_SOURCE_DIR}/arm_install/include")
set(GSL_ARM_LIB "${GSL_SOURCE_DIR}/arm_install/lib")
if(EXISTS ${GSL_ARM_INCLUDE})
    message("gsl for arm folder at [${GSL_ARM_INCLUDE}]")
else()
    message(ERROR " gsl for arm include folder [${GSL_ARM_INCLUDE}] not found")
endif()

if(EXISTS ${GSL_ARM_LIB})
    message("gsl for arm folder at [${GSL_ARM_LIB}]")
else()
    message(ERROR " gsl for arm lib folder [${GSL_ARM_LIB}] not found")
endif()

target_include_directories(pid_6_6 PUBLIC ${GSL_ARM_INCLUDE} ${FPGA_HWLIB_PATH} ${FPGA_SOCAL_PATH})
target_link_directories(pid_6_6 PUBLIC  ${GSL_ARM_LIB})
target_link_libraries(pid_6_6 PUBLIC pthread gsl gslcblas m)
